--- a/style.css
+++ b/style.css
@@ -21,36 +21,35 @@ body {
 
 /* Header en navigatie */
 header {
-    background-color: #1e1e1e;
+    background-color: #333;
     color: #fff;
-    padding: 10px 0; /* Verkleinde padding om de header kleiner te maken */
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
+    padding: 5px 0; /* Kleinere padding voor een kleinere header */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header .logo img {
-    width: 100px; /* Verkleinde logo breedte */
+    width: 100px; /* Kleinere logo breedte */
     vertical-align: middle;
 }
 
 nav ul {
     list-style-type: none;
     display: flex;
-    justify-content: flex-end;
-    padding: 0;
+    gap: 20px; /* Ruimte tussen de knoppen */
     margin: 0;
+    padding: 0;
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 0;
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 1em; /* Verkleinde tekstgrootte voor het menu */
+    font-size: 1.1em;
     font-weight: bold;
     transition: color 0.3s;
 }
@@ -74,66 +73,34 @@ nav ul li a:hover {
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
 }
 
-/* Info section */
-.about-section {
+/* Informatie sectie */
+.about-section, .contact-section {
     background-color: #fff;
     padding: 40px 0;
     margin-top: 30px;
 }
 
-.section-title {
+h2 {
     font-size: 2em;
     margin-bottom: 20px;
     text-align: center;
     font-weight: bold;
 }
 
-.info-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-}
-
-.info-box {
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+ul {
+    list-style: none;
+    padding: 0;
     text-align: center;
 }
 
-.info-box a {
-    color: #333;
-    text-decoration: none;
-}
-
-.info-box a:hover {
-    color: #f4b400;
-}
-
-/* Contact section */
-.contact-section {
-    background-color: #e2e2e2;
-    padding: 40px 0;
-}
-
-.contact-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-}
-
-.contact-box {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
+ul li {
+    font-size: 1.2em;
+    margin: 10px 0;
 }
 
 /* Footer */
 footer {
-    background-color: #1e1e1e;
+    background-color: #333;
     color: #fff;
     text-align: center;
     padding: 20px 0;
@@ -158,9 +125,5 @@ footer {
 
     .hero-title {
         font-size: 2.2em;
-    }
-
-    .info-grid, .contact-grid {
-        grid-template-columns: 1fr;
     }
 }
